--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^27.0.2",
     "jest": "^27.2.4",
     "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
 }
